src/app/front-end/nav/nav.component.scss
@import '../../../variables';
.nav {
  display: flex;
  justify-content: space-between;
  background-color: #f8f8f8;
  // top container holds the home button, and mobile only nav buttons (toggle nav, etc)
  .top-container {
    display: flex;
    justify-content: space-between;
    .home {
      font-size: 44px;
      padding: 2px;
      display: flex;
      align-items: center;
    }
    .mobile-nav {
      display: none;
      margin-left: auto;
    }
  }
  .top-container, .item {
    padding: 10px;
    a {
      display: block;
      padding: 10px;
    }
  }
  .items {
    display: flex;
    justify-content: space-between;
    align-items: center;
    width: 100%;
    .left, .right {
      display: flex;
      justify-content: space-between;
      height: 100%;
    }
    .left {
      margin-right: auto;
    }
    .right {
      margin-left: auto;
    }
    .item {
      display: flex;
      align-items: center;
      &.active {
        background-color: #e7e7e7;
      }
      .sub-items-container {
        height: 0;
        left: 0;
        right: 0;
        top: 68px;
        position: absolute;
        overflow: hidden;
        background-color: white;
        &.active {
          height: initial;
          box-shadow: 0 6px 12px rgba(0,0,0,.175);
          border-bottom: 1px solid rgba(0,0,0,.15);
        }
        .sub-items {
          width: 80%;
          max-width: 900px;
          margin: 0 auto;
          display: flex;
          flex-wrap: wrap;
          justify-content: flex-start;
          .sub-item {
            width: 29.33%;
            margin: 20px 2%;
            text-align: center;
            a {
              position: relative;
              display: block;
              &:focus {
                outline: 2px solid $primaryColor;
              }
              .overlay {
                position: absolute;
                top: 0;
                bottom: 0;
                left: 0;
                right: 0;
                background-color: black;
                opacity: 0.7;
              }
              .title {
                position: absolute;
                top: 50%;
                bottom: 0;
                left: 0;
                right: 0;
                font-size: 32px;
                font-family: $titleFont;
                color: white;
                z-index: 1;
                @media (min-width: 900px) {
                  font-size: 42px;
                }
                @media (min-width: 1200px) {
                  font-size: 58px;
                }
              }
              img {
                width: 100%;
              }
            }
          }
        }
        
      }
    }
  }
  @media (max-width: $mobileBreakPoint) {
    display: initial;
    .top-container {
      .mobile-nav {
        display: initial;
      }
    }
    .items {
      display: initial;
      .left, .right {
        display: initial;
        .item {
          display: block;
          text-align: center;
        }
      }
    }
  }
}

